--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_KEY=base64:cHbHGTXDYKSUjPa/vVCLHZUfVae4cc8drX7WRlzs/pQ=
+APP_URL=http://wealthylife.dev
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=db_wealthy
+DB_USERNAME=pinigai
+DB_PASSWORD=qdaews321
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -24,3 +24,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+BRAINTREE_ENV=sandbox
+BRAINTREE_MERCHANT_ID=9s59dstpmjx3qv9x
+BRAINTREE_PUBLIC_KEY=6dcctxhmnjd2cpjr
+BRAINTREE_PRIVATE_KEY=f965f870c00cad2dc07c33bb17062cce
