--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "illuminate/html": "5.0.*",
         "laracasts/flash": "^2.0",
         "laravel/socialite": "~2.0",
-        "intervention/image": "dev-master"
+        "intervention/image": "dev-master",
+        "laravel/cashier-braintree": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
