--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laracasts/flash": "^2.0",
         "laravel/socialite": "~2.0",
         "intervention/image": "dev-master",
-        "laravel/cashier-braintree": "^1.0"
+        "laravel/cashier-braintree": "^1.0",
+        "sentry/sentry-laravel": "^0.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
