--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
         "illuminate/html": "5.0.*",
         "laracasts/flash": "^2.0",
         "laravel/socialite": "~2.0",
-        "intervention/image": "dev-master",
+        "intervention/image": "^2.3",
         "laravel/cashier-braintree": "^1.0",
-        "sentry/sentry-laravel": "^0.3.0"
+        "sentry/sentry-laravel": "^0.3.0",
+        "barryvdh/laravel-debugbar": "^2.2",
+        "predis/predis": "^1.1",
+        "intervention/imagecache": "^2.3",
+        "roumen/sitemap": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
