Added mobile detection function

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "predis/predis": "^1.1",
         "intervention/imagecache": "^2.3",
-        "roumen/sitemap": "^2.6"
+        "roumen/sitemap": "^2.6",
+        "jenssegers/agent": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
